<resources>
    <string name="app_name">SnapStory</string>
    <string name="title_login_page">Selamat Datang di SnapStory!</string>
    <string name="subtitle_login_page">Hai! Selamat datang kembali di SnapStory. Silahkan login untuk melanjutkan.</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="title_signup_page">Daftarkan Akun Baru Kamu Yuk!</string>
    <string name="subtitle_signup_page">Coba SnapStory yuk!\nBuat akun baru kamu dulu ya!</string>
    <string name="label_name">Nama</string>
    <string name="label_signup">Signup</string>
    <string name="placeholder_password">Masukkan password anda</string>
    <string name="placeholder_email">Masukkan email anda</string>
    <string name="placeholder_name">Masukkan nama anda</string>
    <string name="label_welcome_page">Selamat Datang di SnapStory!</string>
    <string name="subtitle_welcome_page">Explore dan Berbagi Aktivitas Kamu di SnapStory ^_^</string>
    <string name="status_message">Status Message</string>
    <string name="label_logout">Logout</string>
    <string name="user_name">Nama User</string>
    <string name="date_story">yyyy/mm/dd</string>
    <string name="story_description">Deskripsi Story</string>
    <string name="location">location</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="placeholder_deskripsi_story_submit">Masukkan deskripsi story anda</string>
    <string name="add_new_story">Add New Story</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="story_maps">Story Maps</string>
    <string name="snap_story_maps">SnapStory Maps</string>
    <string name="posting_dengan_lokasi">Posting dengan lokasi?</string>
    <string name="lokasi_kamu">Lokasi kamu</string>
    <string name="retry">Ulangi</string>
</resources>