<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/thumbnailImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_background"
                android:transitionName="thumbnail" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:text="@string/date_story"
                android:textColor="@color/background_dark_blue"
                android:transitionName="localDate" />
        </FrameLayout>

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TitleGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:transitionName="userName" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/location"
            app:drawableStartCompat="@drawable/round_location_on_24"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerMaterialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/locationTextView"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_description"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/dividerMaterialDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="storyDescription" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>