<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.newStory.AddNewStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_insert_photo_64"/>

        <RelativeLayout
            android:id="@+id/galleryContainerRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" >

            <ImageButton
                android:id="@+id/galleryImageButton"
                style="@style/ButtonActive"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/baseline_insert_photo_24"
                android:background="@drawable/rounded_image_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_below="@+id/galleryImageButton"
                android:layout_centerHorizontal="true"
                android:text="@string/gallery" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cameraContainerRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView">

            <ImageButton
                android:id="@+id/cameraImageButton"
                style="@style/ButtonActive"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/round_camera_alt_24"
                android:background="@drawable/rounded_image_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_below="@+id/cameraImageButton"
                android:layout_centerHorizontal="true"
                android:text="@string/camera" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraContainerRelativeLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:textSize="14sp"
                android:hint="@string/placeholder_deskripsi_story_submit"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadButton"
            style="@style/ButtonActive"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginVertical="16dp"
            android:text="@string/submit"
            android:backgroundTint="@color/button_background"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>